--- a/index.html
+++ b/index.html
@@ -278,11 +278,13 @@
 <body>
     <div class="message">
         <div class="boxed">
-            <input type="checkbox" name="" id="message" checked />
+            <input type="checkbox" name="" id="message"  />
             <div class="content">
                 <img src="anh1.png" alt="">
                 <div class="tilted"> Vân Anh</div>
-                <div class="des">
+                <div class="des"> Hehe yêu em lắm. Nhớ ăn đủ bữa vào nha :)
+                  <br/>
+                
                 </div>
                 <label for="message">Close</label>
             </div>
