--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
             <div class="content">
                 <img src="anh1.png" alt="">
                 <div class="tilted"> Thorxinhkk </div>
-                <div class="des"> Hehe yêu em lắm. Nhớ ăn đủ bữa vào nha :)
+                <div class="des"> Yêu em nhiều lắm Phương Thảo đít bự của anh awww <3 hihi
                   <br/>
                 
                 </div>
